// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/shared/PrintPretty.vue correctly sets the initialHeight of its resizableContainer 1`] = `
<div>
  <div
    class="layout"
  >
    <div
      class="flex md9 xs12 my-0"
    >
      <!---->
    </div>
     
    <div
      class="flex md3 xs12 my-0 mx-2"
    >
      <div
        class="v-item-group right theme--light v-btn-toggle v-btn-toggle--only-child v-btn-toggle--selected"
      >
        <button
          class="v-btn v-btn--active theme--light"
          title="Wrap lines"
          type="button"
          value="true"
        >
          <div
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              wrap_text
            </i>
          </div>
        </button>
      </div>
    </div>
  </div>
   
  <div
    class="flex py-2"
  >
    <div
      class="resizable-container"
      style="width: 100%; height: 250px;"
    >
      <div
        class="bordered ace_editor ace-monokai ace_dark"
        style="height: 100%; width: 100%; font-size: 14px;"
      >
        <textarea
          autocapitalize="off"
          autocorrect="off"
          class="ace_text-input"
          spellcheck="false"
          style="opacity: 0;"
          wrap="off"
        />
        <div
          aria-hidden="true"
          class="ace_gutter"
        >
          <div
            class="ace_layer ace_gutter-layer ace_folding-enabled"
          />
          <div
            class="ace_gutter-active-line"
          />
        </div>
        <div
          class="ace_scroller"
        >
          <div
            class="ace_content"
          >
            <div
              class="ace_layer ace_print-margin-layer"
            >
              <div
                class="ace_print-margin"
                style="left: 4px; visibility: hidden;"
              />
            </div>
            <div
              class="ace_layer ace_marker-layer"
            />
            <div
              class="ace_layer ace_text-layer"
              style="padding: 0px 4px;"
            />
            <div
              class="ace_layer ace_marker-layer"
            />
            <div
              class="ace_layer ace_cursor-layer ace_hidden-cursors"
            >
              <div
                class="ace_cursor"
              />
            </div>
          </div>
        </div>
        <div
          class="ace_scrollbar ace_scrollbar-v"
          style="display: none; width: 20px;"
        >
          <div
            class="ace_scrollbar-inner"
            style="width: 20px;"
          />
        </div>
        <div
          class="ace_scrollbar ace_scrollbar-h"
          style="display: none; height: 20px;"
        >
          <div
            class="ace_scrollbar-inner"
            style="height: 20px;"
          />
        </div>
        <div
          style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: hidden;"
        >
          <div
            style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: visible;"
          />
          <div
            style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: visible;"
          >
            XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
          </div>
        </div>
      </div>
       
      <div
        class="resizable-container__vertical-handler"
      />
    </div>
  </div>
</div>
`;

exports[`components/shared/PrintPretty.vue should render correct default contents 1`] = `
<div>
  <div
    class="layout"
  >
    <div
      class="flex md9 xs12 my-0"
    >
      <!---->
    </div>
     
    <div
      class="flex md3 xs12 my-0 mx-2"
    >
      <div
        class="v-item-group right theme--light v-btn-toggle"
      >
        <button
          class="v-btn v-btn--active theme--light"
          title="Wrap lines"
          type="button"
          value="true"
        >
          <div
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              wrap_text
            </i>
          </div>
        </button>
      </div>
    </div>
  </div>
   
  <div
    class="flex py-2"
  >
    <div
      class="resizable-container"
      style="width: 100%; height: 600px;"
    >
      <!---->
       
      <div
        class="resizable-container__vertical-handler"
      />
    </div>
  </div>
</div>
`;
